[package]
name = "artur"
version = "0.1.0"
edition = "2024"
rust-version = "1.96"
authors = ["Artur maintainers"]
description = "Config-driven Rust HTTP server"
license = "MIT"
repository = "https://github.com/melonask/artur"
homepage = "https://github.com/melonask/artur"
documentation = "https://docs.rs/artur"
readme = "README.md"
keywords = ["http", "toml", "server", "orchestration", "cli"]
categories = ["command-line-utilities", "web-programming::http-server"]
include = [
  "src/**",
  "tests/**",
  "examples/**",
  "docs/**",
  ".github/workflows/**",
  "README.md",
  "LICENSE",
  "Cargo.toml",
]

[[bin]]
name = "artur"
path = "src/main.rs"

[dependencies]
anyhow = "1"
axum = { version = "0.8", features = ["macros", "json"] }
bytes = "1"
clap = { version = "4.5", features = ["derive", "env"] }
reqwest = { version = "0.13", default-features = false, features = ["rustls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["fs", "macros", "rt-multi-thread", "process", "signal", "time", "io-util"] }
toml = "1.1.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
http-body-util = "0.1"
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
