[package]
name = "artur"
version = "0.2.0"
edition = "2024"
rust-version = "1.96"
authors = ["Artur maintainers"]
description = "Universal config-driven Rust HTTP gateway and package orchestrator"
license = "MIT"
repository = "https://github.com/melonask/artur"
homepage = "https://github.com/melonask/artur"
documentation = "https://docs.rs/artur"
readme = "README.md"
keywords = ["http", "toml", "server", "orchestration", "gateway"]
categories = ["command-line-utilities", "web-programming::http-server"]
include = [
  "src/**",
  "tests/**",
  "examples/**",
  "docs/**",
  ".github/workflows/**",
  "README.md",
  "LICENSE",
  "Cargo.toml",
]

[[bin]]
name = "artur"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
axum = { version = "0.8.9", features = ["macros", "json"] }
bytes = "1.11.1"
clap = { version = "4.6.1", features = ["derive", "env"] }
reqwest = { version = "0.13.4", default-features = false, features = ["rustls"] }
rusqlite = { version = "0.40.1", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.128"
thiserror = "2.0.12"
tokio = { version = "1.52.3", features = ["fs", "macros", "rt-multi-thread", "process", "signal", "time", "io-util"] }
toml = "1.1.2"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
uuid = { version = "1.21.0", features = ["v4", "serde"] }

[dev-dependencies]
http-body-util = "0.1.3"
tempfile = "3.15.0"
tower = { version = "0.5.2", features = ["util"] }

[lints.rust]
unused_must_use = "deny"
