[package]
name = "artur"
version = "1.1.0"
edition = "2024"
rust-version = "1.97"
authors = ["Artur maintainers"]
description = "Universal config-driven Rust HTTP gateway and package orchestrator"
license = "MIT"
repository = "https://github.com/melonask/artur"
homepage = "https://github.com/melonask/artur"
documentation = "https://docs.rs/artur"
readme = "README.md"
keywords = ["http", "toml", "server", "orchestration", "gateway"]
categories = ["command-line-utilities", "web-programming::http-server"]
include = [
  "src/**",
  "tests/**",
  "examples/**",
  "docs/**",
  ".github/workflows/**",
  "README.md",
  "SKILL.md",
  "Config.example.toml",
  "Dockerfile",
  "docker-compose.yml",
  "rustfmt.toml",
  "logo.svg",
  "LICENSE",
  "Cargo.toml",
]

[[bin]]
name = "artur"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.103"
axum = { version = "0.8.9", features = ["macros", "json"] }
bytes = "1.12.1"
clap = { version = "4.6.1", features = ["derive", "env"] }
reqwest = { version = "0.13.4", default-features = false, features = ["rustls"] }
rusqlite = { version = "0.40.1", features = ["bundled"] }
sha2 = "0.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["fs", "macros", "rt-multi-thread", "process", "signal", "sync", "time", "io-util", "net"] }
toml = "1.1.2"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt", "json"] }
uuid = { version = "1.23.4", features = ["v4", "serde"] }
tokio-postgres = { version = "0.7.18", features = ["with-serde_json-1"] }
ipnet = "2.12.0"

[dev-dependencies]
http-body-util = "0.1.3"
tempfile = "3.27.0"
tower = { version = "0.5.3", features = ["util"] }

[lints.rust]
unused_must_use = "deny"
